<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PagamentoActivity">


    <TextView
        android:id="@+id/activity_pagamento_text_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/desription_pagamento"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_pagamento_label_valor_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/valor_da_comprar"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_pagamento_text_descricao" />

    <TextView
        android:id="@+id/activity_pagamento_text_valor_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_pagamento_label_valor_compra"
        tools:text="R$ 421,50" />

    <EditText
        android:id="@+id/activity_pagamento_edit_text_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/n_mero_do_cart_o"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="12"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_pagamento_text_valor_compra" />

    <EditText
        android:id="@+id/activity_pagamento_edit_text_mes"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/mm"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/activity_pagamento_edit_text_cartao"
        app:layout_constraintTop_toBottomOf="@+id/activity_pagamento_edit_text_cartao" />

    <EditText
        android:id="@+id/activity_pagamento_edit_text_ano"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:hint="@string/aa"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/activity_pagamento_edit_text_mes"
        app:layout_constraintTop_toTopOf="@+id/activity_pagamento_edit_text_mes" />

    <EditText
        android:id="@+id/activity_pagamento_edit_text_cvv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/cvv"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="@+id/activity_pagamento_edit_text_cartao"
        app:layout_constraintTop_toTopOf="@+id/activity_pagamento_edit_text_mes" />

    <EditText
        android:id="@+id/activity_pagamento_edit_text_nome_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:digits="abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ "
        android:hint="@string/nome_do_cartao"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/activity_pagamento_edit_text_cvv"
        app:layout_constraintStart_toStartOf="@+id/activity_pagamento_edit_text_mes"
        app:layout_constraintTop_toBottomOf="@+id/activity_pagamento_edit_text_cvv"
        tools:layout_editor_absoluteX="8dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activity_pagamento_button_finaliza_compra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/button_redondo_laranja"
        android:inputType="text"
        android:text="@string/finalizar_compras"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>