<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ResumoCompraActivity">

    <ImageView
        android:id="@+id/activity_resumo_compra_background_banner"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/holo_orange_dark"
        android:contentDescription="@string/fundo_laranja" />

    <TextView
        android:id="@+id/activity_resumo_compra_text_parabens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parabens"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/activity_resumo_compra_background_banner"
        app:layout_constraintEnd_toEndOf="@id/activity_resumo_compra_background_banner"
        app:layout_constraintStart_toStartOf="@id/activity_resumo_compra_background_banner"
        app:layout_constraintTop_toTopOf="@id/activity_resumo_compra_background_banner"
        app:layout_constraintVertical_bias=".1" />

    <TextView
        android:id="@+id/activity_resumo_compra_text_compra_sucesso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/compra_realizada_com_sucesso"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/activity_resumo_compra_text_parabens"
        app:layout_constraintStart_toStartOf="@id/activity_resumo_compra_text_parabens"
        app:layout_constraintTop_toBottomOf="@id/activity_resumo_compra_text_parabens" />


    <TextView
        android:id="@+id/activity_resumo_compra_text_confira_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/confira_o_resumo_da_compra"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_resumo_compra_background_banner" />


    <ImageView
        android:id="@+id/activity_resumo_compra_image_cidade"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/activity_resumo_compra_text_confira_compra"
        tools:src="@sample/pacotes.json/pacotes/imagem"
        android:contentDescription="@string/imagem_da_cidade" />

    <TextView
        android:id="@+id/activity_resumo_compra_text_nome_cidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_resumo_compra_image_cidade"
        tools:text="@sample/pacotes.json/pacotes/local" />

    <TextView
        app:layout_goneMarginTop="8dp"
        android:id="@+id/activity_resumo_compra_text_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/activity_resumo_compra_text_nome_cidade"
        app:layout_constraintTop_toBottomOf="@+id/activity_resumo_compra_text_nome_cidade"
        tools:text="8/12 - 10/12 de 2023" />

    <TextView
        app:layout_goneMarginTop="8dp"
        android:id="@+id/activity_resumo_compra_text_preco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/activity_resumo_compra_text_data"
        app:layout_constraintTop_toBottomOf="@+id/activity_resumo_compra_text_data"
        tools:text="@sample/pacotes.json/pacotes/preco" />


</androidx.constraintlayout.widget.ConstraintLayout>