<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ResumoPacoteActivity">


    <ImageView
        android:contentDescription="@string/imagem_da_cidade"
        android:id="@+id/resumo_pacote_imagem_pacote"
        android:scaleType="centerCrop"
        tools:src="@sample/pacotes.json/pacotes/imagem"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resumo_pacote_local_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@sample/pacotes.json/pacotes/local"
        app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_imagem_pacote"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="8dp"
        />

    <TextView
        android:id="@+id/resumo_pacote_dias_pacote"
        android:layout_marginTop="8dp"
        tools:text="@sample/pacotes.json/pacotes/dias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/resumo_pacote_local_pacote"
        app:layout_constraintStart_toStartOf="@id/resumo_pacote_local_pacote" />

    <TextView
        android:id="@+id/resumo_pacote_data_pacote"
        android:layout_marginTop="8dp"
        tools:text="8/12 - 10/12 de 2023"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/resumo_pacote_preco_pacote"
        app:layout_constraintTop_toBottomOf="@id/resumo_pacote_dias_pacote"
        app:layout_constraintStart_toStartOf="@id/resumo_pacote_dias_pacote" />


    <TextView
        android:id="@+id/resumo_pacote_preco_pacote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/resumo_pacote_data_pacote"
        app:layout_constraintBottom_toBottomOf="@id/resumo_pacote_data_pacote"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@sample/pacotes.json/pacotes/preco" />

    <TextView
        android:text="@string/preco_final"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/resumo_pacote_preco_pacote"
        app:layout_constraintEnd_toEndOf="@+id/resumo_pacote_preco_pacote" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resumo_pacote_button_pacote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/button_redondo_laranja"
        android:padding="16dp"
        android:textColor="@android:color/white"
        android:text="@string/realizar_pagamento"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="8dp" />


</androidx.constraintlayout.widget.ConstraintLayout>